# pybind_example

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
pybind_example/: main.py
pybind_example/backend/: test_class.h
src/: __init__.py  pybind_example.py
src/backend/: animal.cc  animal.h  cat.cc  cat.h  dog.cc  dog.h  test_class.cc  wrapper.cc
test/cc/: CMakeLists.txt  main.cc
tests/cc/: CMakeLists.txt  main.cc
tests/py/: test_pybind_example.py
